@@ -2,6 +2,7 @@ package org.testng.internal.objects.pojo;
 
 import java.util.Objects;
 import org.testng.ITestContext;
+import org.testng.internal.objects.ISuiteContext;
 
 /**
  * Represents the parameters that are associated with object creation.
@@ -11,6 +12,7 @@ public class CreationAttributes {
   private final BasicAttributes basic;
   private final DetailedAttributes detailed;
   private final ITestContext context;
+  private final ISuiteContext suiteContext;
 
   public CreationAttributes(ITestContext ctx, BasicAttributes basic,
       DetailedAttributes detailed) {
@@ -18,6 +20,14 @@ public class CreationAttributes {
     this.basic = basic;
     this.detailed = detailed;
     this.context = ctx;
+    this.suiteContext = null;
+  }
+
+  public CreationAttributes(BasicAttributes basic, ISuiteContext suiteContext) {
+    this.basic = basic;
+    this.detailed = null;
+    this.context = null;
+    this.suiteContext = suiteContext;
   }
 
   public DetailedAttributes getDetailedAttributes() {
@@ -30,5 +40,9 @@ public class CreationAttributes {
 
   public ITestContext getContext() {
     return context;
+  }
+
+  public ISuiteContext getSuiteContext() {
+    return suiteContext;
   }
 }
