@@ -1,0 +1,5 @@
+package test.guice.issue279;
+
+public interface Vehicle {
+  void drive();
+}
